--- a/src/styl/_global.styl
+++ b/src/styl/_global.styl
@@ -2,6 +2,10 @@
    0. GLOBAL
    ========================================================================= */
 
+html
+  position relative
+  min-height $height
+
 body
   font-family "Open Sans", sans-serif
   font-size 18px
